Began setting up the site

--- a/about.html
+++ b/about.html
@@ -10,9 +10,13 @@ background: '/img/bg-about.jpg'
 <p>I like good paper, camping, and strawberry cheesecake.
 (And I don't think that fruit should be on pizza.)</p>
 
-<h2>Skills</h2>
-
-<ul>
+<div class="row">
+  <div class="col-md-12">
+    <h2>Skills</h2>
+  </div>
+  <div class="col-md-6">
+    <h3>Web Strategy</h3>
+    <ul>
 <li>Web Project Management</li>
 <li>Enterprise-wide Websites</li>
 <li>Centralized Site Management</li>
@@ -22,31 +26,50 @@ background: '/img/bg-about.jpg'
 <li>Web Migration</li>
 <li>Client Communication</li>
 <li>Higher Education Websites</li>
-<li>HTML</li>
+      <li>Information Architecture</li>
+    </ul>
+  </div>
+  <div class="col-md-6">
+    <h3>Web Development</h3>
+    <ul>
+      <li>HTML</li>
 <li>CSS</li>
 <li>XML</li>
 <li>Responsive Development</li>
 <li>Javascript Implementation</li>
 <li>Responsive Design</li>
-<li>Information Architecture</li>
-<li>User Interface Design</li>
+    </ul>
+  </div>
+  <div class="col-md-6">
+    <h3>Web Design</h3>
+    <ul>
+      <li>Adobe XD</li>
+      <li>User Interface Design</li>
 <li>HTML Email Design and Development</li>
 <li>Email Marketing Systems</li>
-<li>Digital Design</li>
+    </ul>
+  </div>
+<div class="col-md-6">
+    <h3>Additional Design Skills</h3>
+    <ul>
+      <li>Digital Design</li>
 <li>Digital Branding</li>
 <li>Print Design</li>
 <li>Photo Editing</li>
 <li>Adobe Illustrator</li>
 <li>Adobe Photoshop</li>
 <li>Adobe InDesign</li>
-<li>Adobe XD</li>
-</ul>
+    </ul>
+  </div>
+  
+</div>
+
 
 <h2>Personal Facts</h2>
 <ul class="mb-5">
-  <li><a href="https://baconipsum.com/" target="blank">Fan of Bacon Ipsum</a></li>
-  <li><a href="http://howtoreallypronouncegif.com/" target="blank">Pronounces it gif, not jif</a></li>
+  <li><a href="https://baconipsum.com/" target="_blank">Fan of Bacon Ipsum</a></li>
+  <li><a href="http://howtoreallypronouncegif.com/" target="_blank">Pronounces it gif, not jif</a></li>
   <li>Supports the Oxford Comma</li>
   <li>Makes handmade soap</li>
-  <li><a href="https://www.youtube.com/watch?v=XMZIAlKFRY4" target="blank">Allergic to gluten</a></li>
+  <li><a href="https://www.youtube.com/watch?v=XMZIAlKFRY4" target="_blank">Allergic to gluten</a></li>
 </ul>
