Portfolio Feed and more

--- a/_portfolio/belcher-memorial.html
+++ b/_portfolio/belcher-memorial.html
@@ -2,7 +2,7 @@
 layout: portfolio-item
 title: Belcher Memorial
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
-project-date: June 2018
+project-date: 2018-06-15
 work-type: Design and Development
 site-type: Static HTML Site
 front-image: /img/portfolio/wcu-homepage-front.jpg
