--- a/_portfolio/catamount-club.html
+++ b/_portfolio/catamount-club.html
@@ -1,10 +1,10 @@
 ---
 layout: portfolio-item
-title: Give to OHIO Website
+title: Catamount Club
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
-project-date: 2020-09-15
-work-type: Design adjustments and Development
-site-type: Drupal CMS Site
+project-date: 2019-03-15
+work-type: Design and Development
+site-type: CMS Site
 front-image: /img/portfolio/wcu-homepage-front.jpg
 front-image-alt: "dinosaur scultptures"
 ---
