--- a/_portfolio/wcu-homepage.html
+++ b/_portfolio/wcu-homepage.html
@@ -2,7 +2,7 @@
 layout: portfolio-item
 title: Western Carolina University Homepage
 subtitle: Redesign and development of the website homepage for a mid-sized, regional university in North Carolina.
-project-date: May 2019
+project-date: 2019-05-15
 work-type: Design and Development
 site-type: CMS Site
 front-image: /img/portfolio/wcu-homepage-front.jpg
