--- a/_portfolio/wcu-stories.html
+++ b/_portfolio/wcu-stories.html
@@ -2,7 +2,7 @@
 layout: portfolio-item
 title: WCU Stories
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
-project-date: May 2020
+project-date: 2020-05-15
 work-type: Design
 site-type: CMS Site
 front-image: /img/portfolio/wcu-homepage-front.jpg
