--- a/_portfolio/ou-framework-document.html
+++ b/_portfolio/ou-framework-document.html
@@ -1,10 +1,9 @@
 ---
 layout: portfolio-item
-title: Give to OHIO Website
+title: Ohio University Strategic Framework
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
-project-date: 2020-09-15
-work-type: Design adjustments and Development
-site-type: Drupal CMS Site
+project-date: 2019-09-15
+work-type: Print Design
 front-image: /img/portfolio/wcu-homepage-front.jpg
 front-image-alt: "dinosaur scultptures"
 ---
