Font Size, Images, and Portfolio Page Layout

--- a/_portfolio/give-to-ohio.html
+++ b/_portfolio/give-to-ohio.html
@@ -3,9 +3,9 @@ layout: portfolio-item
 title: Give to OHIO Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2020-09-15
-work-type: Design adjustments and Development
-site-type: Drupal CMS Site
-front-image: /img/portfolio/wcu-homepage-front.jpg
+work-type: design adjustments and development
+site-type: Drupal CMS site
+front-image: /img/portfolio/give-ohio-front.jpg
 front-image-alt: "dinosaur scultptures"
 ---
 
