--- a/_portfolio/wcu-homepage.html
+++ b/_portfolio/wcu-homepage.html
@@ -1,10 +1,10 @@
 ---
 layout: portfolio-item
-title: Western Carolina University Homepage
+title: Western Carolina University Website Homepage
 subtitle: Redesign and development of the website homepage for a mid-sized, regional university in North Carolina.
 project-date: 2019-05-15
-work-type: Design and Development
-site-type: CMS Site
+work-type: design and development
+site-type: CMS site
 front-image: /img/portfolio/wcu-homepage-front.jpg
 front-image-alt: "dinosaur scultptures"
 ---
