--- a/_portfolio/wcu-stories.html
+++ b/_portfolio/wcu-stories.html
@@ -1,6 +1,6 @@
 ---
 layout: portfolio-item
-title: WCU Stories
+title: WCU Stories Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2020-05-15
 work-type: Design
