--- a/_portfolio/belcher-memorial.html
+++ b/_portfolio/belcher-memorial.html
@@ -1,6 +1,6 @@
 ---
 layout: portfolio-item
-title: Belcher Memorial
+title: Belcher Memorial Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2018-06-15
 work-type: Design and Development
