--- a/_portfolio/catamount-club.html
+++ b/_portfolio/catamount-club.html
@@ -1,6 +1,6 @@
 ---
 layout: portfolio-item
-title: Catamount Club
+title: Catamount Club Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2019-03-15
 work-type: Design and Development
