--- a/_portfolio/haiti-made-catalog.html
+++ b/_portfolio/haiti-made-catalog.html
@@ -1,10 +1,10 @@
 ---
 layout: portfolio-item
-title: Ohio University Strategic Framework Booklet
-subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
-project-date: 2019-09-15
-work-type: Print Design
-front-image: /img/portfolio/strategic-framework-front.jpg
+title: Haiti Made Catalog
+subtitle: Print catalog for Haiti Made items
+project-date: 2015-02-15
+work-type: Design
+front-image: /img/portfolio/haiti-made-front.jpg
 front-image-alt: "dinosaur scultptures"
 ---
 
