--- a/_portfolio/mountains-to-macys.html
+++ b/_portfolio/mountains-to-macys.html
@@ -1,6 +1,6 @@
 ---
 layout: portfolio-item
-title: Mountains to Macy's
+title: Mountains to Macy's Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2018-11-15
 work-type: Design and Development
