--- a/_portfolio/haiti-made-catalog.html
+++ b/_portfolio/haiti-made-catalog.html
@@ -3,9 +3,15 @@ layout: portfolio-item
 title: Haiti Made Catalog
 subtitle: Print catalog for Haiti Made items
 project-date: 2015-02-15
-work-type: Design
+work-type: design
 front-image: /img/portfolio/haiti-made-front.jpg
 front-image-alt: "dinosaur scultptures"
 ---
 
+<p>This catalog showcases handmade products created by individuals in Haiti.</p>
+
+<img src="../../img/portfolio/haiti-made-catalog-1.jpg" class="img-fluid" alt="catalog front cover and interior pages" />
+
 <p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
+
+<img src="../../img/portfolio/haiti-made-catalog-2.jpg" class="img-fluid" alt="catalog back cover and interior pages" />
