Added new project shells
Added shells for more recent projects. Commented out Posts section from homepage. Minor updates to About page.

--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 ---
 layout: page
 title: About Me
-description: This is what I do.
+description: I enjoy creating new, on-brand web designs and writing code to bring them to the web. Read more about my skills and interests.
 background: '/img/bg-about.jpg'
-last-updated: October 19, 2020
+last-updated: February 13, 2022
 ---
 
 <p>I am a web design and development manager of an enterprise-wide university website with 200+ CMS editors. I have over nine years of experience in various areas of design including web, digital, and print design, and have eight years of service in the higher education landscape. I currently oversee the style, structure, functionality, and technical advancement of the university's web spaces, and design and build new pages and sites for high-level initiatives. I enjoy the complex artistry of web design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
 
-<p>I like good paper, camping, and strawberry cheesecake.
+<p>I like good paper, home DIY projects, and strawberry cheesecake.
 (And I don't think that fruit should be on pizza.)</p>
 
 <div class="row">
@@ -18,15 +18,15 @@ last-updated: October 19, 2020
   <div class="col-md-6">
     <h3>Web Strategy</h3>
     <ul>
-<li>Web Project Management</li>
-<li>Enterprise-wide Websites</li>
-<li>Centralized Site Management</li>
-<li>Web Accessibility</li>
-<li>Content Management Systems</li>
-<li>Web Content Assessment</li>
-<li>Web Migration</li>
-<li>Client Communication</li>
-<li>Higher Education Websites</li>
+      <li>Web Project Management</li>
+      <li>Enterprise-wide Websites</li>
+      <li>Centralized Site Management</li>
+      <li>Web Accessibility</li>
+      <li>Content Management Systems</li>
+      <li>Web Content Assessment</li>
+      <li>Web Migration</li>
+      <li>Client Communication</li>
+      <li>Higher Education Websites</li>
       <li>Information Architecture</li>
     </ul>
   </div>
@@ -34,32 +34,34 @@ last-updated: October 19, 2020
     <h3>Web Development</h3>
     <ul>
       <li>HTML</li>
-<li>CSS</li>
-<li>XML</li>
-<li>Responsive Development</li>
-<li>Javascript Implementation</li>
-<li>Responsive Design</li>
+      <li>CSS</li>
+      <li>Responsive Development</li>
+      <li>Drupal CMS</li>
+      <li>Javascript Implementation</li>
+      <li>XML</li>
+      <li>Twig</li>
     </ul>
   </div>
   <div class="col-md-6">
     <h3>Web Design</h3>
     <ul>
-      <li>Adobe XD</li>
+      <li>Responsive Design</li>
       <li>User Interface Design</li>
-<li>HTML Email Design and Development</li>
-<li>Email Marketing Systems</li>
+      <li>Adobe XD</li>
+      <li>HTML Email Design and Development</li>
+      <li>Email Marketing Systems</li>
     </ul>
   </div>
 <div class="col-md-6">
     <h3>Additional Design Skills</h3>
     <ul>
       <li>Digital Design</li>
-<li>Digital Branding</li>
-<li>Print Design</li>
-<li>Photo Editing</li>
-<li>Adobe Illustrator</li>
-<li>Adobe Photoshop</li>
-<li>Adobe InDesign</li>
+      <li>Digital Branding</li>
+      <li>Print Design</li>
+      <li>Photo Editing</li>
+      <li>Adobe Illustrator</li>
+      <li>Adobe Photoshop</li>
+      <li>Adobe InDesign</li>
     </ul>
   </div>
   
