--- a/_portfolio/give-to-ohio.html
+++ b/_portfolio/give-to-ohio.html
@@ -1,7 +1,7 @@
 ---
 layout: portfolio-item
 title: Give to OHIO Website
-subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
+subtitle: ggggggggggggggggggg
 project-date: 2020-09-15
 work-type: design adjustments and development
 site-type: Drupal CMS site
@@ -9,4 +9,4 @@ front-image: /img/portfolio/give-ohio-front.jpg
 front-image-alt: "dinosaur scultptures"
 ---
 
-<p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
+<p>asdfadsf</p>
