--- a/_portfolio/wcu-homepage.html
+++ b/_portfolio/wcu-homepage.html
@@ -6,12 +6,12 @@ project-date: 2019-05-15
 work-type: design and development
 site-type: CMS site
 front-image: /img/portfolio/wcu-homepage-front.jpg
-front-image-alt: "dinosaur scultptures"
+front-image-alt: "university website homepage thumbnail"
 ---
 
 <h2 class="section-heading">Project Goals</h2>
 
-<p>Goals included in this redesign and development overhaul project:</p>
+<p>Goals accomplished in this redesign and development overhaul project:</p>
 <ul>
 <li>Surface content marketing and news content</li>
 <li>Surface important links for different audience groups</li>
@@ -22,3 +22,9 @@ front-image-alt: "dinosaur scultptures"
 <li>Reduce load time of the page</li>
 <li>Improve event representation and information</li>
 </ul>
+<h2 class="section-heading">Responsive Layouts</h2>
+
+<h2 class="section-heading">Refresh Comparison</h2>
+<img class="img-fluid" src="../../img/portfolio/wcu-homepage-old-vs-new.jpg" alt="Side-by-side comparison of the old homepage layout with my new design" />
+
+<a class="btn btn-primary" href="https://www.wcu.edu/" target="_blank">Visit the Site</a>
