--- a/_portfolio/christmas-celebration.html
+++ b/_portfolio/christmas-celebration.html
@@ -6,6 +6,7 @@ project-date: 2014-10-15
 work-type: Print Design
 front-image: /img/portfolio/christmas-celebration-front.jpg
 front-image-alt: "dinosaur scultptures"
+published: false
 ---
 
 <p>Some Text</p>
