--- a/_portfolio/give-to-ohio.html
+++ b/_portfolio/give-to-ohio.html
@@ -9,4 +9,11 @@ front-image: /img/portfolio/give-ohio-front.jpg
 front-image-alt: "dinosaur scultptures"
 ---
 
-<p>asdfadsf</p>
+<h2>Goal 1</h2>
+<p>Complete design alterations and feature development for the new Giving website to improve users engagement with giving opportunities and fund options at the university. Launch the new website by October 1st.</p>
+
+<h2>Self-Assessment</h2>
+<p>This project was a beneficial learning experience for me. It allowed me to familiarize myself with developing within the Drupal system. I am pleased with the resulting website design and functionality. We created a new fund content type with 17 data fields that allow site editors to incorporate dynamic content for each fund, such as embeded video, quotes, and social media links. Utilzing this data structure, we created more than 100 funds with associated pages, 6 new programatic fund content displays, and filterable card functionality. I was also able to incorporate elements of the newly released brand into the website pages, helping to modernize the site and provide cohesion between Giving and the overall Ohio University brand.</p>
+
+<h2>Supervisor Comments</h2>
+<p>In partnership with fellow UCM team members, Haley was instrumental in developing a new giving portal for Ohio University Advancement in-house. University leadership was skeptical of the proposed approach and the project members were met with resistance each step of the way, but delivered an excellent product that is lightyears ahead of the previous giving portal in terms of design, functionality, and overall user experience. This was an impressive first large-scale project for Haley to complete in her role at OHIO.</p>
