--- a/_portfolio/haiti-made-catalog.html
+++ b/_portfolio/haiti-made-catalog.html
@@ -6,6 +6,7 @@ project-date: 2015-02-15
 work-type: design
 front-image: /img/portfolio/haiti-made-front.jpg
 front-image-alt: "dinosaur scultptures"
+published: false
 ---
 
 <p>This catalog showcases handmade products created by individuals in Haiti.</p>
