--- a/_portfolio/ou-forever-page.html
+++ b/_portfolio/ou-forever-page.html
@@ -9,15 +9,31 @@ front-image: /img/portfolio/wcu-homepage-front.jpg
 front-image-alt: "university website homepage thumbnail"
 ---
 
-<h2 class="section-heading">Project Goals</h2>
-
-<p>Goals accomplished in this redesign and development overhaul project:</p>
-<ul>
-<li>Surface content marketing and news content</li>
+<p>Ohio University needed a branded campaign landing webpage for the new Forever OHIO brand platform. It is linked to by the university homepage and digital advertisements, is listed as the website address in print materials and tv campaigns, and is sometimes the first digital interaction that a prospective student has with the institution.</p>
 
 <h2 class="section-heading">Responsive Layouts</h2>
 
 <h2 class="section-heading">Refresh Comparison</h2>
 <img class="img-fluid" src="../../img/portfolio/wcu-homepage-old-vs-new.jpg" alt="Side-by-side comparison of the old homepage layout with my new design" />
 
-<a class="btn btn-primary" href="https://www.ohio.edu/" target="_blank">Visit the Site</a>
+<h2 class="section-heading">Project Goals</h2>
+
+<ul>
+<li>Design and develop a branded campaign landing webpage for the new Forever OHIO brand platform</li>
+<li>Increase visibility of our brand and engagement with our institution by the prospective student audience</li>
+<li>Get prospective students into the enrollment funnel by driving them to apply or complete an RFI form</li>
+<li>Provide a succinct representation of our brand and the Ohio University student experience</li>
+<li>designed and developed this webpage in an incredibly aggressive turnaround time</li>
+</ul>
+
+
+<h2 class="section-heading">Outcomes</h2>
+
+<ul>
+    <li>resulting page exceeded initial design expectations</li>
+    <li>is a visually compelling representation of the Forever OHIO brand</li>
+    <li>Since it was published in November, 2020, this page has received greater than 46,000 unique pageviewing sessions. This Forever OHIO page was the entrance page, the first page on our website interacted with by a user, in more than 42,000 of these sessions.</li>
+</ul>
+
+
+<a class="btn btn-primary" href="https://www.ohio.edu/forever" target="_blank">Visit the Site</a>
