--- a/_portfolio/ou-homepage.html
+++ b/_portfolio/ou-homepage.html
@@ -14,6 +14,36 @@ front-image-alt: "university website homepage thumbnail"
 <p>Goals accomplished in this redesign and development overhaul project:</p>
 <ul>
 <li>Surface content marketing and news content</li>
+</ul>
+
+
+<p>Create a rebranded university website homepage that improves the user experience on the page and increases user engagement.
+    Utilize the new Forever brand elements on the page.
+    Include a content organization proposal that is informed by user testing results.</p>
+
+Self-Assessment 
+<p>I completed both the content organization, page layout, design and development of the new homepage.
+    I had aggressive goals for this page, including show/hide functionality previously not utilized on the old page design, which reveals additional page content.
+    The resulting page is a strong balance of previously-existing and new content, presented with bold visuals.
+    By listening to users’ needs through user testing we were able to surface sought-after content, such as the new ‘Find Your Major’ section, whose content was given a more prominent display than in previous layouts. 
+    The button link in this section ranks in the top 10 in highest number of click engagements for items on the page, showing that users are finding this desired topic in the new layout.
+    Follow-up user testing has shown positive results from the page updates, including:
+    on-brand perceptions of the university;
+    users are able to identify what is special about Ohio University;
+    users trust the website;
+    users like the amount of content on the page; 
+    sers percieve community as part of the Ohio University experience;
+    users are able to identify the location(s) of Ohio University much more quickly than before;
+    and users quickly catch on to the forever theme, key differentiators and overall vibe of Ohio University after viewing the page.</p>
+
+Supervisor Comments
+<p>Haley was the lead developer and designer on the Ohio University gateway.
+    She utilized qualitative and quantitative data conducted by fellow UCM Web Team members to deliver a slick homepage design that effectively portrays the updated Forever OHIO brand both visually and through content storytelling.
+    Post-launch user testing has shown improved results from the design and content updates with our prospective student demographic.</p>
+
+    
+    <blockquote>As the top visited webpage on the ohio.edu domain, the distinctive work on this highly visible page has without a doubt resulted in a positive ROI.</blockquote>
+
 
 <h2 class="section-heading">Responsive Layouts</h2>
 
