--- a/_portfolio/gs-summer-brochure.html
+++ b/_portfolio/gs-summer-brochure.html
@@ -6,6 +6,7 @@ project-date: 2014-12-15
 work-type: design
 front-image: /img/portfolio/gs-summer-brochure-front.jpg
 front-image-alt: "dinosaur scultptures"
+published: false
 ---
 
 <p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
