--- a/_portfolio/ou-experience-directory.html
+++ b/_portfolio/ou-experience-directory.html
@@ -9,15 +9,28 @@ front-image: /img/portfolio/wcu-homepage-front.jpg
 front-image-alt: "university website homepage thumbnail"
 ---
 
-<h2 class="section-heading">Project Goals</h2>
+<div class="row">
+    <div class="col-md-6">
+        <img class="img-fluid" src="../../img/portfolio/experience-internal-pg-detail.png" alt="detail image of the page design showing a cost and scholarships section" />
+    </div>
+    <div class="col-md-6">
+        <h2 class="section-heading">Project Goals</h2>
+        <p>Goals accomplished in this redesign and development overhaul project:</p>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <h2 class="section-heading">Project Goals</h2>
 
-<p>Goals accomplished in this redesign and development overhaul project:</p>
-<ul>
-<li>Surface content marketing and news content</li>
-
-<h2 class="section-heading">Responsive Layouts</h2>
-
-<h2 class="section-heading">Refresh Comparison</h2>
-<img class="img-fluid" src="../../img/portfolio/wcu-homepage-old-vs-new.jpg" alt="Side-by-side comparison of the old homepage layout with my new design" />
-
-<a class="btn btn-primary" href="https://www.ohio.edu/" target="_blank">Visit the Site</a>
+        <p>Goals accomplished in this redesign and development overhaul project:</p>
+        <ul>
+        <li>Surface content marketing and news content</li>
+        </ul>
+        
+        <h2 class="section-heading">Results</h2>
+        
+        <a class="btn btn-primary" href="https://www.ohio.edu/" target="_blank">Visit the Site</a>
+</div>
+</div>
+</div>
