Commented out post dates
also changed page from "Posts" to "Blog"

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,7 +48,7 @@ background: '/img/bg-portfolio.jpg'
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
 
-       <p>You made it to the end! I'm impressed. Thanks for taking a look.</p>
+       <p>You made it to the end! Thanks for taking a look.</p>
 
       </div>
     </div>
