--- a/_portfolio/ou-building-directory.html
+++ b/_portfolio/ou-building-directory.html
@@ -5,8 +5,8 @@ subtitle: Redesign and development of the university's building directory and ca
 project-date: 2021-08-06
 work-type: design and development
 site-type: Drupal CMS site
-front-image: /img/portfolio/wcu-homepage-front.jpg
-front-image-alt: "university website homepage thumbnail"
+front-image: /img/portfolio/directory-front.jpg
+front-image-alt: "building directory website on laptop, tablet, and mobile devices"
 ---
 
 <h2 class="section-heading">Project Goals</h2>
