--- a/_portfolio/ou-forever-page.html
+++ b/_portfolio/ou-forever-page.html
@@ -5,7 +5,7 @@ subtitle: Design and creation of the marketing landing page for Ohio University'
 project-date: 2020-11-09
 work-type: design and development
 site-type: Drupal CMS Landing page
-front-image: /img/portfolio/wcu-homepage-front.jpg
+front-image: /img/portfolio/experience-front.jpg
 front-image-alt: "university website homepage thumbnail"
 ---
 
@@ -35,5 +35,11 @@ front-image-alt: "university website homepage thumbnail"
     <li>Since it was published in November, 2020, this page has received greater than 46,000 unique pageviewing sessions. This Forever OHIO page was the entrance page, the first page on our website interacted with by a user, in more than 42,000 of these sessions.</li>
 </ul>
 
+<p>Goal 2 – Design and develop a branded campaign landing webpage for the new Forever OHIO brand platform to increase visibility of our brand and engagement with our institution by the prospective student audience. The page will aim to get prospective students into the enrollment funnel by driving them to apply or complete an RFI form. It must be a succinct representation of our brand and the Ohio University student experience.
+
+    Self-Assessment  – This project had aggressive design goals and an aggressive timeline. The resulting page exceeded initial design expectations and is a visually compelling representation of the Forever OHIO brand. It is linked to by our university homepage and digital advertisements, is listed as the website address in print materials and our tv campaign, and is sometimes the first digital interaction that a prospective student has with our institution. Since it was published in November, 2020, this page has received greater than 46,000 unique pageviewing sessions. This Forever OHIO page was the entrance page, the first page on our website interacted with by a user, in more than 42,000 of these sessions.
+    
+    Supervisor Comments – Haley was the sole designer and developer on this highly visible webpage that is the destination of the new branding campaign, Forever OHIO. She designed and developed this webpage in an incredibly aggressive turnaround time and exceeded expectations across the board. She perfectly captured the Forever OHIO brand in partnership with UCM leadership, who assisted with copy and concept.
+    </p>
 
 <a class="btn btn-primary" href="https://www.ohio.edu/forever" target="_blank">Visit the Site</a>
