--- a/index.html
+++ b/index.html
@@ -4,3 +4,29 @@ title: "Haley Hopper"
 subtitle: "Web Design &amp; Development Strategist"
 background: '/img/bg-index.jpg'
 ---
+
+<p>I create strategic, modern web design that will boost your business’s online brand.</p>
+<p>You're dealing with:</p>
+<ul>
+    <li>Out-dated designs</li>
+    <li>Content your target audience doesn’t care about</li>
+    <li>Lack of next-steps or unclear what action to take next</li>
+    <li>Confusing page layouts and user experience</li>
+</ul>
+
+<p>If you work with me you'll have:</p>
+<ul>
+    <li>Content hierarchy for what your users are seeking</li>
+    <li>Modern aesthetic showing you care about your online reputation</li>
+    <li>Focus on responsive behavior so your site meets users where they are – on their phones.</li>
+</ul>
+
+<p>Hi! I’m Haley Hopper. I’m a web designer and front-end developer with more than a decade of experience in the digital landscape. I create data-driven, user-focused designs for businesses to level-up their online presence and modernize their style while staying true to their core brand.</p>
+<p>When you work with me, you should expect questions like “What are your key differentiators?” and “What are the primary goals of your target audience?” not “What colors do want your buttons to be?”</p>
+<p>I’m not a good fit for you if:</p>
+<ul>
+    <li>You are looking for someone to just “make it pretty.”</li>
+    <li>You don’t like someone asking questions and you want them the to blindly follow instructions.</li>
+    <li>You aren’t open to someone pushing back on ideas in advocation for end users and customers.</li>
+</ul>
+<p>Do we sound like a match? Tell me about your project.</p>
