--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Portfolio
+title: Recent Projects
 background: '/img/bg-portfolio.jpg'
 ---
 
@@ -27,7 +27,7 @@ background: '/img/bg-portfolio.jpg'
 
   <div class="container">
 
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
       <!-- Portfolio Full Projects List Sorted by project-date -->
       {% assign projects = site.portfolio | sort: 'project-date' | reverse %}
       {% for post in projects %}
@@ -46,7 +46,7 @@ background: '/img/bg-portfolio.jpg'
 <hr>
 
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
+      <div class="col-lg-8 col-md-10 mx-auto text-center">
 
        <p>You made it to the end! Thanks for taking a look.</p>
 
