--- a/_portfolio/christmas-celebration.html
+++ b/_portfolio/christmas-celebration.html
@@ -1,13 +1,30 @@
 ---
 layout: portfolio-item
 title: Christmas Celebration Print Collateral
-subtitle: Print collection
+subtitle: Identity and print marketing collection for a local fundraiser.
 project-date: 2014-10-15
 work-type: Print Design
 front-image: /img/portfolio/christmas-celebration-front.jpg
-front-image-alt: "dinosaur scultptures"
-published: false
+front-image-alt: "christmas event poster displayed next to a candy cane"
+published: true
 ---
 
-<p>Some Text</p>
-<img src="/img/portfolio/christmascelebration.jpg" class="img-fluid" alt="images of different print materials like signs, flyers, and tickets" />
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <p>In the autumn of 2014, I designed this print collection for the marketing of the "Hometown Christmas Celebration." This event raised funds to support the newly opened transitional-housing and homeless shelter, the <a href="https://www.haywoodpathwayscenter.org/">Haywood Pathways Center</a>. The December 13, 2014, event successfully raised $12,000 to assist with the completion of the center, and the shelter's kitchen was able to serve its first meals on January 5, 2015.</p>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-10 offset-lg-1 text-center">
+        <img src="/img/portfolio/christmascelebration.jpg" class="img-fluid" alt="images of different print materials like signs, flyers, and tickets" />
+    </div>
+</div>
+<div class="container">
+    <div class="row">  
+        <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <p>The Center was first conceptualized in early 2014 as post-incarceration transitional housing, a homeless shelter, and soup kitchen and became a rallying point for the local community, with more than 1000 volunteers coming together to renovate the building. Now offering numerous services to guests in need, Haywood Pathways Center has gone on to be a crucial resource in transforming lives in Haywood County, N.C.</p>
+        </div>
+    </div>
+</div>
