--- a/_portfolio/give-to-ohio.html
+++ b/_portfolio/give-to-ohio.html
@@ -3,10 +3,11 @@ layout: portfolio-item
 title: Give to OHIO Website
 subtitle: ggggggggggggggggggg
 project-date: 2020-09-15
-work-type: design adjustments and development
+work-type: Web Design Adjustments and Development
 site-type: Drupal CMS site
 front-image: /img/portfolio/give-ohio-front.jpg
 front-image-alt: "dinosaur scultptures"
+published: true
 ---
 
 <h2>Goal 1</h2>
