--- a/_portfolio/gs-summer-brochure.html
+++ b/_portfolio/gs-summer-brochure.html
@@ -1,12 +1,12 @@
 ---
 layout: portfolio-item
-title: Summer Camp Brochure
-subtitle: Printed brochure about summer camp options.
+title: Girls' Guide to Summer Adventure
+subtitle: Printed summer camp brochure presenting camp program options.
 project-date: 2014-12-15
-work-type: design
+work-type: Print Design
 front-image: /img/portfolio/gs-summer-brochure-front.jpg
-front-image-alt: "dinosaur scultptures"
-published: false
+front-image-alt: "two printed program guides displaying camp options are displayed on wooden boards"
+published: true
 ---
 
 <p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
