--- a/_portfolio/haiti-made-catalog.html
+++ b/_portfolio/haiti-made-catalog.html
@@ -1,18 +1,29 @@
 ---
 layout: portfolio-item
 title: Haiti Made Catalog
-subtitle: Print catalog for Haiti Made items
+subtitle: Printed catalog of handcrafted goods.
 project-date: 2015-02-15
-work-type: design
+work-type: Print Design
 front-image: /img/portfolio/haiti-made-front.jpg
-front-image-alt: "dinosaur scultptures"
-published: false
+front-image-alt: "cover of a printed catalog of handmade products"
+published: true
 ---
 
-<p>This catalog showcases handmade products created by individuals in Haiti.</p>
-
-<img src="../../img/portfolio/haiti-made-catalog-1.jpg" class="img-fluid" alt="catalog front cover and interior pages" />
-
-<p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
-
-<img src="../../img/portfolio/haiti-made-catalog-2.jpg" class="img-fluid" alt="catalog back cover and interior pages" />
+<div class="row">
+    <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2 mb-5">
+        <img src="../../img/portfolio/haiti-made-catalog-1.jpg" class="img-fluid" alt="catalog front cover and interior pages" />
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-5">
+            <p>This print catalog showcases products crafted by individuals in Haiti. <a href="https://www.haitimade.com/" target="_blank">Haiti Made</a> fights the cycle of poverty in Haiti through job creation and increased economic sustainability. This Haitian-operated company empowers individuals to provide for families and create careers while producing quality handmade goods.</p>
+            <p>In 2014, I had the opportunity to visit their studio and learn about their processes and operations firsthand. I was proud to work with the company to design a new catalog of their 2015 product offerings.</p>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2 mb-5">
+        <img src="../../img/portfolio/haiti-made-catalog-2.jpg" class="img-fluid" alt="catalog back cover and interior pages" />
+    </div>
+</div>
