--- a/_portfolio/mountains-to-macys.html
+++ b/_portfolio/mountains-to-macys.html
@@ -3,7 +3,7 @@ layout: portfolio-item
 title: Mountains to Macy's Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2018-11-15
-work-type: Design and Development
+work-type: Web Design and Development
 site-type: Static HTML Site
 front-image: /img/portfolio/mountains-to-macys-front.jpg
 front-image-alt: "dinosaur scultptures"
