--- a/_portfolio/ou-building-directory.html
+++ b/_portfolio/ou-building-directory.html
@@ -3,10 +3,11 @@ layout: portfolio-item
 title: Ohio University Building Directory
 subtitle: Redesign and development of the university's building directory and campus map website.
 project-date: 2021-08-06
-work-type: design and development
+work-type: Web Design and Development
 site-type: Drupal CMS site
 front-image: /img/portfolio/directory-front.jpg
 front-image-alt: "building directory website on laptop, tablet, and mobile devices"
+published: true
 ---
 
 <h2 class="section-heading">Project Goals</h2>
