--- a/_portfolio/ou-experience-directory.html
+++ b/_portfolio/ou-experience-directory.html
@@ -3,10 +3,11 @@ layout: portfolio-item
 title: Experience OHIO Website
 subtitle: A new directory for university students that showcases opportunities for experiential learning.
 project-date: 2022-4-07
-work-type: design and development
+work-type: Web Design and Development
 site-type: Drupal CMS site
 front-image: /img/portfolio/experience-front.jpg
 front-image-alt: "interior experience page thumbnail"
+published: true
 ---
 
 <div class="row">
