--- a/_portfolio/ou-framework-document.html
+++ b/_portfolio/ou-framework-document.html
@@ -6,7 +6,17 @@ project-date: 2019-09-15
 work-type: Print Design
 front-image: /img/portfolio/strategic-framework-front.jpg
 front-image-alt: "dinosaur scultptures"
-published: false
+published: true
 ---
 
-<p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
+<div class="row">
+    <div class="col-lg-8 offset-lg-2 mb-4">
+        <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal1.jpg" alt="page design showing a full experience layout" />
+    </div>
+    <div class="col-lg-5 offset-lg-1">
+        <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal2.jpg" alt="page design showing a full experience layout" />
+    </div>
+    <div class="col-lg-4">
+        <p>The Center was first conceptualized in early 2014 as post-incarceration transitional housing, a homeless shelter, and soup kitchen and became a rallying point for the local community, with more than 1000 volunteers coming together to renovate the building. Now offering numerous services to guests in need, Haywood Pathways Center has gone on to be a crucial resource in transforming lives in Haywood County, N.C.</p>
+    </div>
+</div>
