--- a/_portfolio/ou-homepage.html
+++ b/_portfolio/ou-homepage.html
@@ -3,10 +3,11 @@ layout: portfolio-item
 title: Ohio University Website Homepage
 subtitle: Redesign and development of the website homepage for a public university in southeastern Ohio.
 project-date: 2020-12-16
-work-type: design and development
+work-type: Web Design and Development
 site-type: Drupal CMS site
 front-image: /img/portfolio/experience-front.jpg
 front-image-alt: "university website homepage thumbnail"
+published: true
 ---
 
 <h2 class="section-heading">Project Goals</h2>
