--- a/_portfolio/wcu-stories.html
+++ b/_portfolio/wcu-stories.html
@@ -3,10 +3,11 @@ layout: portfolio-item
 title: WCU Stories Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2020-05-15
-work-type: Design
+work-type: Web Design
 site-type: CMS Site
 front-image: /img/portfolio/wcu-stories-front.jpg
 front-image-alt: "dinosaur scultptures"
+published: true
 ---
 
 <p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
