--- a/_portfolio/whee-lead.html
+++ b/_portfolio/whee-lead.html
@@ -3,7 +3,7 @@ layout: portfolio-item
 title: Whee Lead Campaign Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2016-02-15
-work-type: design and development
+work-type: Web Design and Development
 site-type: static HTML site
 front-image: /img/portfolio/whee-lead-front.jpg
 front-image-alt: "dinosaur scultptures"
