--- a/_portfolio/belcher-memorial.html
+++ b/_portfolio/belcher-memorial.html
@@ -3,10 +3,11 @@ layout: portfolio-item
 title: Belcher Memorial Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2018-06-15
-work-type: Design and Development
+work-type: Web Design and Development
 site-type: Static HTML Site
 front-image: /img/portfolio/belcher-memorial-front.jpg
 front-image-alt: "dinosaur scultptures"
 ---
 
-<p>This new website showcases the stories of the WCU community. The site provides a digital space for content marketing articles, news, and announcements to live together- a space previously unpossessed by the university. I designed an entirely new navigation experience and page layout for this site, creating a landing page which displays a diverse set of static and feed-based content.</p>
+<p>UCDA Design Competition - Honorable Mention - Website Category</p>
+<a href="https://www.wcu.edu/davidobelcher/" target="_blank">Visit the Site</a>
