--- a/_portfolio/catamount-club.html
+++ b/_portfolio/catamount-club.html
@@ -3,7 +3,7 @@ layout: portfolio-item
 title: Catamount Club Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2019-03-15
-work-type: Design and Development
+work-type: Web Design and Development
 site-type: CMS Site
 front-image: /img/portfolio/catamount-club-front.jpg
 front-image-alt: "dinosaur scultptures"
