--- a/_portfolio/leadership-summit.html
+++ b/_portfolio/leadership-summit.html
@@ -3,7 +3,7 @@ layout: portfolio-item
 title: Leadership Summit Website
 subtitle: A new digital space for university content marketing articles, news, and announcements to live together.
 project-date: 2015-08-15
-work-type: design and development
+work-type: Web Design and Development
 site-type: static HTML site
 front-image: /img/portfolio/leadership-summit-front.jpg
 front-image-alt: "dinosaur scultptures"
