--- a/_portfolio/ou-forever-page.html
+++ b/_portfolio/ou-forever-page.html
@@ -3,10 +3,11 @@ layout: portfolio-item
 title: Forever OHIO Landing Page
 subtitle: Design and creation of the marketing landing page for Ohio University's brand campaign.
 project-date: 2020-11-09
-work-type: design and development
+work-type: Web Design and Development
 site-type: Drupal CMS Landing page
 front-image: /img/portfolio/experience-front.jpg
 front-image-alt: "university website homepage thumbnail"
+published: true
 ---
 
 <p>Ohio University needed a branded campaign landing webpage for the new Forever OHIO brand platform. It is linked to by the university homepage and digital advertisements, is listed as the website address in print materials and tv campaigns, and is sometimes the first digital interaction that a prospective student has with the institution.</p>
