wcu homepage and belcher memorial

--- a/_portfolio/ou-framework-document.html
+++ b/_portfolio/ou-framework-document.html
@@ -13,10 +13,14 @@ published: true
     <div class="col-lg-8 offset-lg-2 mb-4">
         <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal1.jpg" alt="page design showing a full experience layout" />
     </div>
-    <div class="col-lg-5 offset-lg-1">
-        <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal2.jpg" alt="page design showing a full experience layout" />
-    </div>
-    <div class="col-lg-4">
-        <p>The Center was first conceptualized in early 2014 as post-incarceration transitional housing, a homeless shelter, and soup kitchen and became a rallying point for the local community, with more than 1000 volunteers coming together to renovate the building. Now offering numerous services to guests in need, Haywood Pathways Center has gone on to be a crucial resource in transforming lives in Haywood County, N.C.</p>
-    </div>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6 col-lx-7">
+            <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal2.jpg" alt="page design showing a full experience layout" />
+        </div>
+        <div class="col-lg-6 col-xl-5">
+            <p>The Center was first conceptualized in early 2014 as post-incarceration transitional housing, a homeless shelter, and soup kitchen and became a rallying point for the local community, with more than 1000 volunteers coming together to renovate the building.</p>
+        </div>
+    </div>
+</div>ß
